--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formidable": "^3.5.1",
     "@supabase/supabase-js": "^2.0.0",
     "xml2js": "^0.4.23",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "xlsx": "^0.18.5"
   }
 }
