--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.0.0",
     "xml2js": "^0.4.23",
     "papaparse": "^5.4.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "openai": "^4.43.1",
+    "@qdrant/js-client-rest": "^1.7.4"
   }
 }
