--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@qdrant/js-client-rest": "^1.7.4",
+    "@supabase/supabase-js": "^2.0.0",
+    "formidable": "^3.5.1",
+    "json2csv": "^6.0.0",
     "next": "13.4.12",
+    "openai": "^4.43.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "formidable": "^3.5.1",
-    "@supabase/supabase-js": "^2.0.0",
-    "xml2js": "^0.4.23",
-    "papaparse": "^5.4.1",
-    "xlsx": "^0.18.5",
-    "openai": "^4.43.1",
-    "@qdrant/js-client-rest": "^1.7.4"
+    "stripe": "^12.0.0",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12"
   }
 }
