--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@qdrant/js-client-rest": "^1.7.4",
+    "stripe": "^12.0.0",
+    "json2csv": "^5.0.7",
     "@supabase/supabase-js": "^2.0.0",
     "formidable": "^3.5.1",
-    "json2csv": "^6.0.0",
-    "next": "13.4.12",
+    "xml2js": "^0.4.23",
     "openai": "^4.43.1",
+    "@qdrant/js-client-rest": "^1.7.4",
+    "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "^12.0.0",
-    "xml2js": "^0.4.23"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.46.0",
